INTEG-162: Review of the English labels

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
@@ -11,7 +11,7 @@ ContactUIActivity.msg.contact-add=A new contact has been added: {0}
 ContactUIActivity.msg.contact-update=The following contact has been updated: {0}
 ContactUIActivity.label.email=Email:
 ContactUIActivity.label.job-title=Job Title:
-ContactUIActivity.label.Phone=Mobile Phone: 
+ContactUIActivity.label.Phone=Cell Phone: 
 CalendarUIActivity.label.more-info=More Info
 CalendarUIActivity.label.accept-invite=Accept
 CalendarUIActivity.label.refuse-invite=Refuse
@@ -28,7 +28,7 @@ CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
 CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
 CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
 CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
-CalendarUIActivity.msg.allDay_updated=Event is now an all day event.
+CalendarUIActivity.msg.allDay_updated=Event is now an all-day event.
 CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
 CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
 CalendarUIActivity.msg.repeatType_updated=Event will be repeated {0}.
@@ -38,8 +38,8 @@ CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to t
 CalendarUIActivity.msg.needs-action=Task needs action.
 CalendarUIActivity.msg.in-process=Task is in progress.
 CalendarUIActivity.msg.completed=Task has been completed.
-CalendarUIActivity.msg.canceled=Task has been cancelled.
-CalendarUIActivity.msg.repeatEvent_instance_removed=Event cancelled on {0}.
+CalendarUIActivity.msg.canceled=Task has been canceled.
+CalendarUIActivity.msg.repeatEvent_instance_removed=Event canceled on {0}.
 
 CalendarUIActivity.msg.daily=every day
 CalendarUIActivity.msg.every-day=every {interval} days
