--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -3,7 +3,7 @@ ForumUIActivity.label.update-post={0} has updated a post: {1}
 ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
 ForumUIActivity.label.update-topic={0} has updated a topic: {1}
 ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View last Reply
+ForumUIActivity.label.lastReply=View Last Reply
 ForumUIActivity.label.submit=Submit
 ForumUIActivity.label.view=View
 ForumUIActivity.msg.reply-success=you have replied to the post: {0}
@@ -30,7 +30,7 @@ AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answe
 AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
 AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
 AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
-AnswerUIActivity.label.answer-disapproved=Answer has been disapproved: {0}
+AnswerUIActivity.label.answer-disapproved=Answer has been unapproved: {0}
 AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
 AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
 AnswerUIActivity.label.question-activated=Question has been activated.
@@ -48,4 +48,3 @@ AnswerUIActivity.label.answers={0} Answers
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
-
