--- a/integ-search-portlet/src/main/resources/quicksearch/quicksearch_en.properties
+++ b/integ-search-portlet/src/main/resources/quicksearch/quicksearch_en.properties
@@ -1,6 +1,6 @@
 quicksearch.label=Quick Search Settings
-quicksearch.resultsPerType.label=Results per type:
-quicksearch.searchIn.label=Search in:
+quicksearch.resultsPerType.label=Results per Type:
+quicksearch.searchIn.label=Search In:
 quicksearch.everything.label=All
 quicksearch.currentsite.label=Search in current site only:
 quicksearch.saveSettings.label=Save Settings
