--- a/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_en.properties
+++ b/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_en.properties
@@ -1,5 +1,5 @@
 unifiedsearch.index.label=Search
-unifiedsearch.index.relevancy.label=Relevancy
+unifiedsearch.index.relevancy.label=Relevance
 unifiedsearch.index.date.label=Date
 unifiedsearch.index.title.label=Title
 unifiedsearch.index.sortBy.label=Sort By:
@@ -9,11 +9,11 @@ unifiedsearch.index.contentTypes.label=All Content Types
 unifiedsearch.index.showmore.label=Show More Results
 unifiedsearch.edit.label=Search Settings
 unifiedsearch.edit.resultsPerPage.label=Results per page:
-unifiedsearch.edit.searchIn.label=Search in:
-unifiedsearch.edit.everything.label=All
+unifiedsearch.edit.searchIn.label=Search In:
+unifiedsearch.edit.everything.label=Everything
 unifiedsearch.edit.currentsite.label=Search in current site only:
 unifiedsearch.edit.hideSearchForm.label=Hide search form:
 unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
 unifiedsearch.edit.saveSettings.label=Save Settings
-unifiedsearch.edit.alert.saveSettings=Your setting has been saved.
+unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
 unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
