--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -26,7 +26,7 @@
       <emptySummary>The summary has been removed.</emptySummary>
       <emptyContent>The content has been removed.</emptyContent>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
-      <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
+      <removeMetadata>Metadata {0} has been removed.</removeMetadata>  
       <removeTitle>Title has been removed.</removeTitle>
       <removeName>Name has been removed.</removeName>
       <removeSummary>Summary has been removed.</removeSummary>
