--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
@@ -22,7 +22,7 @@ UIComposerDocumentExtension.label.View_File=View
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=File Selector
 UIPopupWindow.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file is not existing or some error occurred with selected file.
+UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
 UIComposer.msg.error.Must_select_file=You have to select file first.
 UIDocActivitySelector.label.cancel=Cancel
 UIDocActivitySelector.label.selectedfile=Select
