--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
@@ -25,7 +25,9 @@ CalendarUIActivity.label.due-for=Due for
 
 CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
 CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
+CalendarUIActivity.msg.description_removed=Description has been removed.
 CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
+CalendarUIActivity.msg.location_removed=Location has been removed.
 CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
 CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
 CalendarUIActivity.msg.allDay_updated=Event is now an all-day event.
@@ -34,6 +36,7 @@ CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}.
 CalendarUIActivity.msg.repeatType_updated=Event will be repeated {0}.
 CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
 CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
+CalendarUIActivity.msg.note_removed=Note has been removed.
 CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
 CalendarUIActivity.msg.needs-action=Task needs action.
 CalendarUIActivity.msg.in-process=Task is in progress.
