--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -25,7 +25,9 @@ CalendarUIActivity.label.allday=(toute la journee)
 
 CalendarUIActivity.msg.summary_updated=Le sommaire a \u00e9t\u00e9 mis \u00e0 jour: {0}.
 CalendarUIActivity.msg.description_updated=La description a \u00e9t\u00e9 mise \u00e0 jour: {0}.
+CalendarUIActivity.msg.description_removed=La description a \u00e9t\u00e9 supprim\u00e9e.
 CalendarUIActivity.msg.location_updated=Le lieu a \u00e9t\u00e9 mis \u00e0 jour: {0}.
+CalendarUIActivity.msg.location_removed=Le lieu a \u00e9t\u00e9 supprim\u00e9.
 CalendarUIActivity.msg.priority_updated=La priorit\u00e9 est devenue: {0}.
 CalendarUIActivity.msg.attachment_updated=Des fichiers ont \u00e9t\u00e9 ajout\u00e9s \u00e0 l'\u00e9v\u00e9nement.
 CalendarUIActivity.msg.allDay_updated=L'\u00e9v\u00e9nement dure toute la journ\u00e9e.
@@ -34,6 +36,7 @@ CalendarUIActivity.msg.toDateTime_updated=La date de fin a \u00e9t\u00e9 mise \u
 CalendarUIActivity.msg.repeatType_updated=L'\u00e9v\u00e9nement sera r\u00e9p\u00e9t\u00e9 tous les: {0}.
 CalendarUIActivity.msg.name_updated=Le nom a \u00e9t\u00e9 mis \u00e0 jour: {0}.
 CalendarUIActivity.msg.note_updated=La note a \u00e9t\u00e9 mise \u00e0 jour: {0}.
+CalendarUIActivity.msg.note_removed=La note a \u00e9t\u00e9 supprim\u00e9e.
 CalendarUIActivity.msg.task_attachment_updated=Des fichiers ont \u00e9t\u00e9 ajout\u00e9s \u00e0 la t\u00e2che.
 CalendarUIActivity.msg.needs-action=La t\u00e2che attend une action.
 CalendarUIActivity.msg.in-process=La t\u00e2che est en cours.
