FORUM-392 | [Forum] Should update number of replies in activity when deleting reply

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -3,7 +3,7 @@ ForumUIActivity.label.update-post={0} has updated a post: {1}
 ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
 ForumUIActivity.label.update-topic={0} has updated a topic: {1}
 ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View Last Reply
+ForumUIActivity.label.lastReply=View latest reply
 ForumUIActivity.label.submit=Submit
 ForumUIActivity.label.view=View
 ForumUIActivity.msg.reply-success=you have replied to the post: {0}
@@ -44,6 +44,7 @@ AnswerUIActivity.label.comments={0} Comments
 AnswerUIActivity.label.noAnswer=No Answer
 AnswerUIActivity.label.answer={0} Answer
 AnswerUIActivity.label.answers={0} Answers
+AnswerUIActivity.label.button.answer=Answer
 
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
