--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -44,6 +44,7 @@ AnswerUIActivity.label.comments={0} Commentaires
 AnswerUIActivity.label.noAnswer=Pas de Reponse
 AnswerUIActivity.label.answer={0} Reponse
 AnswerUIActivity.label.answers={0} Reponses
+AnswerUIActivity.label.button.answer=R\u00e9pondre
 
 PollUIActivity.label.update_poll=[FR]Poll has been updated.
 PollUIActivity.label.vote={0} vote
