--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -1,50 +1,50 @@
-ForumUIActivity.label.add-post={0} a ajout\u00e9 un nouveau message: {1}
-ForumUIActivity.label.update-post={0} a mis \u00e0 jour le message: {1}
-ForumUIActivity.label.add-topic={0} a cr\u00e9\u00e9 une nouvelle discussion: {1}
-ForumUIActivity.label.update-topic={0} a mis \u00e0 jour la discussion: {1}
-ForumUIActivity.label.reply=R\u00e9pondre
-ForumUIActivity.label.lastReply=Voir derniere reponse
+ForumUIActivity.label.add-post={0} a ajout\u00E9 un nouveau message: {1}
+ForumUIActivity.label.update-post={0} a mis \u00E0 jour le message: {1}
+ForumUIActivity.label.add-topic={0} a cr\u00E9\u00E9 une nouvelle discussion: {1}
+ForumUIActivity.label.update-topic={0} a mis \u00E0 jour la discussion: {1}
+ForumUIActivity.label.reply=R\u00E9pondre
+ForumUIActivity.label.lastReply=Voir la derni\u00E8re r\u00E9ponse
 ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
-ForumUIActivity.msg.reply-success=Vous avez r\u00e9pondu au message: {0}
+ForumUIActivity.msg.reply-success=Vous avez r\u00E9pondu au message: {0}
 ForumUIActivity.msg.reply-empty=Le titre du message est vide.
-ForumUIActivity.forum.update-topic-title=(FR)Title has been updated to: {0}
-ForumUIActivity.forum.update-topic-content=(FR)Content has been edited.
-ForumUIActivity.forum.update-topic-rate=(FR)Rated the topic: {0}
-ForumUIActivity.forum.closed-topic=Topic has been closed.
-ForumUIActivity.forum.opened-topic=Topic has been opened.
-ForumUIActivity.forum.locked-topic=Topic has been locked.
-ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
-ForumUIActivity.forum.approved-topic=Topic has been approved.
-ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
-ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
-ForumUIActivity.forum.update-post=Edited his reply to: {0}
-ForumUIActivity.forum.add-poll=(FR)A poll has been added to the topic.
-ForumUIActivity.forum.update-poll=(FR)Poll has been updated.
-ForumUIActivity.forum.close-poll=(FR)Poll has been closed.
-ForumUIActivity.forum.remove-poll=(FR)Poll has been removed.
+ForumUIActivity.forum.update-topic-title=Le titre a \u00E9t\u00E9 chang\u00E9 en : {0}
+ForumUIActivity.forum.update-topic-content=Le contenu a \u00E9t\u00E9 modifi\u00E9.
+ForumUIActivity.forum.update-topic-rate=La discussion a \u00E9t\u00E9 not\u00E9e: {0}
+ForumUIActivity.forum.closed-topic=Le discussion a \u00E9t\u00E9 ferm\u00E9e.
+ForumUIActivity.forum.opened-topic=La discussion a \u00E9t\u00E9 ouverte.
+ForumUIActivity.forum.locked-topic=La discussion a \u00E9t\u00E9 verrouill\u00E9e.
+ForumUIActivity.forum.unlocked-topic=La discussion a \u00E9t\u00E9 d\u00E9verrouill\u00E9e.
+ForumUIActivity.forum.approved-topic=La discussion a \u00E9t\u00E9 approuv\u00E9e.
+ForumUIActivity.forum.unapproved-topic=La discussion a \u00E9t\u00E9 d\u00E9sapprouv\u00E9e.
+ForumUIActivity.forum.move-topic=Le sujet a \u00E9t\u00E9 d\u00E9plac\u00E9 vers : {0} > {1}
+ForumUIActivity.forum.update-post=A modifi\u00E9 sa r\u00E9ponse en: {0}
+ForumUIActivity.forum.add-poll=Un sondage a \u00E9t\u00E9 ajout\u00E9 \u00E0 la discussion.
+ForumUIActivity.forum.update-poll=Le sondage a \u00E9t\u00E9 mis \u00E0 jour.
+ForumUIActivity.forum.close-poll=Le sondage a \u00E9t\u00E9 ferm\u00E9.
+ForumUIActivity.forum.remove-poll=Le sondage a \u00E9t\u00E9 ferm\u00E9.
 
-AnswerUIActivity.label.answer-add=[FR]Answer has been submitted: {0}
-AnswerUIActivity.label.answer-update-content=[FR]Answer has been edited to: {0}
-AnswerUIActivity.label.answer-promoted=[FR]Comment {0} has been promoted as an answer
-AnswerUIActivity.label.answer-activated=[FR]Answer has been activated: {0}
-AnswerUIActivity.label.answer-unactivated=[FR]Answer has been unactivated: {0}
-AnswerUIActivity.label.answer-approved=[FR]Answer has been approved: {0}
-AnswerUIActivity.label.answer-disapproved=[FR]Answer has been disapproved: {0}
-AnswerUIActivity.label.question-update-title=[FR]Title has been updated to: {0}
-AnswerUIActivity.label.question-update-detail=[FR]Detail has been updated to: {0}
-AnswerUIActivity.label.question-activated=[FR]Question has been activated.
-AnswerUIActivity.label.question-unactivated=[FR]Question has been unactivated.
-AnswerUIActivity.label.question-add-language=[FR]Question has been added in: {0}
-AnswerUIActivity.label.question-add-attachment=[FR]Attachment(s) has been added.
-AnswerUIActivity.label.button.view=View
+AnswerUIActivity.label.answer-add=Une r\u00E9ponse a \u00E9t\u00E9 propos\u00E9e: {0}
+AnswerUIActivity.label.answer-update-content=La r\u00E9ponse a \u00E9t\u00E9 chang\u00E9e en : {0}
+AnswerUIActivity.label.answer-promoted=Le commentaire {0} a \u00E9t\u00E9 promu comme r\u00E9ponse
+AnswerUIActivity.label.answer-activated=La r\u00E9ponse a \u00E9t\u00E9 activ\u00E9e: {0}
+AnswerUIActivity.label.answer-unactivated=La r\u00E9ponse a \u00E9t\u00E9 d\u00E9sactiv\u00E9e: {0}
+AnswerUIActivity.label.answer-approved=La r\u00E9ponse a \u00E9t\u00E9 approuv\u00E9e: {0}
+AnswerUIActivity.label.answer-disapproved=La r\u00E9ponse a \u00E9t\u00E9 d\u00E9sapprouv\u00E9e: {0}
+AnswerUIActivity.label.question-update-title=Le titre a \u00E9t\u00E9 chang\u00E9 en: {0}
+AnswerUIActivity.label.question-update-detail=La description a \u00E9t\u00E9 chang\u00E9e en: {0}
+AnswerUIActivity.label.question-activated=La question a \u00E9t\u00E9 activ\u00E9e.
+AnswerUIActivity.label.question-unactivated=La question a \u00E9t\u00E9 d\u00E9sactiv\u00E9e.
+AnswerUIActivity.label.question-add-language=La question a \u00E9t\u00E9 ajout\u00E9e en: {0}
+AnswerUIActivity.label.question-add-attachment=Des pi\u00E8ces jointes ont \u00E9t\u00E9 ajout\u00E9es.
+AnswerUIActivity.label.button.view=Consulter
 AnswerUIActivity.label.noComment=Pas de Commentaire
 AnswerUIActivity.label.comment={0} Commentaire
 AnswerUIActivity.label.comments={0} Commentaires
-AnswerUIActivity.label.noAnswer=Pas de Reponse
+AnswerUIActivity.label.noAnswer=Pas de R\u00E9ponse
 AnswerUIActivity.label.answer={0} Reponse
 AnswerUIActivity.label.answers={0} Reponses
 
-PollUIActivity.label.update_poll=[FR]Poll has been updated.
+PollUIActivity.label.update_poll=Le sondage a \u00E9t\u00E9 mis \u00E0 jour
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
