--- a/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_fr.properties
+++ b/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_fr.properties
@@ -1,19 +1,19 @@
 unifiedsearch.index.label=Rechercher
-unifiedsearch.index.relevancy.label=Pertience
+unifiedsearch.index.relevancy.label=Pertinence
 unifiedsearch.index.date.label=Date
 unifiedsearch.index.title.label=Titre
 unifiedsearch.index.sortBy.label=Trier Par:
 unifiedsearch.index.filterBy.label=Filtrer Par
-unifiedsearch.index.allsites.label=Tous les sites
-unifiedsearch.index.contentTypes.label=Tous les types de contenus
-unifiedsearch.index.showmore.label=Plus de résultats
-unifiedsearch.edit.label=Paramètres de la recherche
-unifiedsearch.edit.resultsPerPage.label=Résultats par page:
+unifiedsearch.index.allsites.label=Tous les Sites
+unifiedsearch.index.contentTypes.label=Tous les Types de Contenu
+unifiedsearch.index.showmore.label=Plus de R\u00E9sultats
+unifiedsearch.edit.label=Param\u00E8tres de la Recherche
+unifiedsearch.edit.resultsPerPage.label=R\u00E9sultats par page:
 unifiedsearch.edit.searchIn.label=Rechercher dans:
 unifiedsearch.edit.everything.label=Tous
-unifiedsearch.edit.currentsite.label=Rechercher dans le site actuel:
-unifiedsearch.edit.hideSearchForm.label=Cacher un formulaire de recherche:
-unifiedsearch.edit.hideFacetsFilter.label=Cache les facettes filtre:
-unifiedsearch.edit.saveSettings.label=Enregistrer les paramètres:
-unifiedsearch.edit.alert.saveSettings=Votre réglage a été sauvegardé.
-unifiedsearch.edit.alert.error.saveSettings=Le problème s'est produit lors de l'enregistrement de votre réglage:
+unifiedsearch.edit.currentsite.label=Rechercher dans le site actuel uniquement:
+unifiedsearch.edit.hideSearchForm.label=Masquer le formulaire de recherche:
+unifiedsearch.edit.hideFacetsFilter.label=Masquer le filtre par facettes:
+unifiedsearch.edit.saveSettings.label=Enregistrer
+unifiedsearch.edit.alert.saveSettings=Vos param\u00E8tres ont \u00E9t\u00E9 enregistr\u00E9s.
+unifiedsearch.edit.alert.error.saveSettings=Un probl\u00E8me s'est produit lors de l'enregistrement de vos param\u00E8tres.
