--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -16,14 +16,14 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=Fichier
-UIComposerDocumentExtension.label.Select_File=S\u00e9lectionner un fichier
-UIComposerDocumentExtension.label.Download=T\u00e9l\u00e9charger
+UIComposerDocumentExtension.label.Select_File=S\u00E9lectionnez un fichier
+UIComposerDocumentExtension.label.Download=T\u00E9l\u00E9charger
 UIComposerDocumentExtension.label.View_File=Voir
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Choisir un fichier
-UIPopupWindow.title.UIDocActivitySelector=S\u00e9lectionner un fichier
+UIPopupWindow.title.UIDocActivitySelector=S\u00E9lectionnez un fichier
 UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont survenues.
 UIComposer.msg.error.Must_select_file=Vous devez d'abord choisir un fichier.
 UIDocActivitySelector.label.cancel=Annuler
-UIDocActivitySelector.label.selectedfile=S\u00e9lectionner
+UIDocActivitySelector.label.selectedfile=S\u00E9lectionner
 UIDSUploadInput.label.Upload=Envoyer
