--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -1,44 +1,65 @@
-CalendarUIActivity.msg.event-add={0} a ajout\u00e9 un \u00e9v\u00e9nement: {1}
-CalendarUIActivity.msg.event-update={0} vient de mettre \u00e0 jour cet \u00e9v\u00e9nement: {1}
-CalendarUIActivity.msg.task-add={0} a ajout\u00e9 une t\u00e2che: {1}
-CalendarUIActivity.msg.task-update={0} vient de mettre \u00e0 jour cette t\u00e2che: {1}
+CalendarUIActivity.msg.event-add={0} a ajout\u00E9 un \u00E9v\u00E9nement: {1}
+CalendarUIActivity.msg.event-update={0} vient de mettre \u00E0 jour cet \u00E9v\u00E9nement: {1}
+CalendarUIActivity.msg.task-add={0} a ajout\u00E9 une t\u00E2che: {1}
+CalendarUIActivity.msg.task-update={0} vient de mettre \u00E0 jour cette t\u00E2che: {1}
 CalendarUIActivity.msg.event.label.description=Description : 
 CalendarUIActivity.msg.event.label.location=Lieu : 
-CalendarUIActivity.msg.event.label.start-time=Heure de d\u00e9but :
+CalendarUIActivity.msg.event.label.start-time=Heure de d\u00E9but :
 CalendarUIActivity.msg.event.label.end-time=Heure de fin :
-CalendarUIActivity.msg.event-not-found=Les donn\u00e9es de l'\u00e9v\u00e9nement ne sont pas disponibles en ce moment.
-ContactUIActivity.msg.contact-add=Un nouveau contact a \u00e9t\u00e9 ajout\u00e9: {0}
-ContactUIActivity.msg.contact-update=La suite du contact a \u00e9t\u00e9 mis \u00e0 jour: {0}
+CalendarUIActivity.msg.event-not-found=Les donn\u00E9es de l'\u00E9v\u00E9nement ne sont pas disponibles en ce moment.
+ContactUIActivity.msg.contact-add=Un nouveau contact a \u00E9t\u00E9 ajout\u00E9: {0}
+ContactUIActivity.msg.contact-update=Le contact suivant a \u00E9t\u00E9 mis \u00E0 jour: {0}
 ContactUIActivity.label.email=Email :
 ContactUIActivity.label.job-title=Titre de l'emploi :
-ContactUIActivity.label.Phone=T\u00e9l\u00e9phone mobile : 
+ContactUIActivity.label.Phone=T\u00E9l\u00E9phone mobile : 
 CalendarUIActivity.label.more-info=Plus d'Info
 CalendarUIActivity.label.accept-invite=Accepter
 CalendarUIActivity.label.refuse-invite=Refuser
-CalendarUIActivity.label.assign-to-me=Assigner \u00e0 moi
-CalendarUIActivity.label.need-action=Action n\u00e9cessaire
+CalendarUIActivity.label.assign-to-me=Assigner \u00E0 moi
+CalendarUIActivity.label.need-action=Action n\u00E9cessaire
 CalendarUIActivity.label.in-progress=En cours
 CalendarUIActivity.label.complete=Terminer
 CalendarUIActivity.label.cancel=Annuler
-CalendarUIActivity.label.allday=(toute la journee)
+CalendarUIActivity.label.allday=(toute la journ\u00E9e)
+CalendarUIActivity.label.due-for=A faire pour
 
+CalendarUIActivity.msg.summary_updated=Le sommaire a \u00E9t\u00E9 mis \u00E0 jour: {0}.
+CalendarUIActivity.msg.description_updated=La description a \u00E9t\u00E9 mise \u00E0 jour: {0}.
+CalendarUIActivity.msg.description_removed=La description a \u00E9t\u00E9 supprim\u00E9e.
+CalendarUIActivity.msg.location_updated=Le lieu a \u00E9t\u00E9 mis \u00E0 jour: {0}.
+CalendarUIActivity.msg.location_removed=Le lieu a \u00E9t\u00E9 supprim\u00E9.
+CalendarUIActivity.msg.priority_updated=La priorit\u00E9 est devenue: {0}.
+CalendarUIActivity.msg.attachment_updated=Des fichiers ont \u00E9t\u00E9 ajout\u00E9s \u00E0 l'\u00E9v\u00E9nement.
+CalendarUIActivity.msg.allDay_updated=L'\u00E9v\u00E9nement dure toute la journ\u00E9e.
+CalendarUIActivity.msg.fromDateTime_updated=La date de d\u00E9but a \u00E9t\u00E9 mise \u00E0 jour: {0}.
+CalendarUIActivity.msg.toDateTime_updated=La date de fin a \u00E9t\u00E9 mise \u00E0 jour: {0}. 
+CalendarUIActivity.msg.repeatType_updated=L'\u00E9v\u00E9nement sera r\u00E9p\u00E9t\u00E9 tous les: {0}.
+CalendarUIActivity.msg.name_updated=Le nom a \u00E9t\u00E9 mis \u00E0 jour: {0}.
+CalendarUIActivity.msg.note_updated=La note a \u00E9t\u00E9 mise \u00E0 jour: {0}.
+CalendarUIActivity.msg.note_removed=La note a \u00E9t\u00E9 supprim\u00E9e.
+CalendarUIActivity.msg.task_attachment_updated=Des fichiers ont \u00E9t\u00E9 ajout\u00E9s \u00E0 la t\u00E2che.
+CalendarUIActivity.msg.needs-action=La t\u00E2che attend une action.
+CalendarUIActivity.msg.in-process=La t\u00E2che est en cours.
+CalendarUIActivity.msg.completed=La t\u00E2che a \u00E9t\u00E9 termin\u00E9e.
+CalendarUIActivity.msg.canceled=La t\u00E2che a \u00E9t\u00E9 annul\u00E9e.
+CalendarUIActivity.msg.repeatEvent_instance_removed=\u00C9v\u00E9nement annul\u00E9 le {0}.
 
-CalendarUIActivity.msg.summary_updated=Le sommaire a \u00e9t\u00e9 mis \u00e0 jour: {0}.
-CalendarUIActivity.msg.description_updated=La description a \u00e9t\u00e9 mise \u00e0 jour: {0}.
-CalendarUIActivity.msg.description_removed=La description a \u00e9t\u00e9 supprim\u00e9e.
-CalendarUIActivity.msg.location_updated=Le lieu a \u00e9t\u00e9 mis \u00e0 jour: {0}.
-CalendarUIActivity.msg.location_removed=Le lieu a \u00e9t\u00e9 supprim\u00e9.
-CalendarUIActivity.msg.priority_updated=La priorit\u00e9 est devenue: {0}.
-CalendarUIActivity.msg.attachment_updated=Des fichiers ont \u00e9t\u00e9 ajout\u00e9s \u00e0 l'\u00e9v\u00e9nement.
-CalendarUIActivity.msg.allDay_updated=L'\u00e9v\u00e9nement dure toute la journ\u00e9e.
-CalendarUIActivity.msg.fromDateTime_updated=La date de d\u00e9but a \u00e9t\u00e9 mise \u00e0 jour: {0}.
-CalendarUIActivity.msg.toDateTime_updated=La date de fin a \u00e9t\u00e9 mise \u00e0 jour: {0}. 
-CalendarUIActivity.msg.repeatType_updated=L'\u00e9v\u00e9nement sera r\u00e9p\u00e9t\u00e9 tous les: {0}.
-CalendarUIActivity.msg.name_updated=Le nom a \u00e9t\u00e9 mis \u00e0 jour: {0}.
-CalendarUIActivity.msg.note_updated=La note a \u00e9t\u00e9 mise \u00e0 jour: {0}.
-CalendarUIActivity.msg.note_removed=La note a \u00e9t\u00e9 supprim\u00e9e.
-CalendarUIActivity.msg.task_attachment_updated=Des fichiers ont \u00e9t\u00e9 ajout\u00e9s \u00e0 la t\u00e2che.
-CalendarUIActivity.msg.needs-action=La t\u00e2che attend une action.
-CalendarUIActivity.msg.in-process=La t\u00e2che est en cours.
-CalendarUIActivity.msg.completed=La t\u00e2che a \u00e9t\u00e9 termin\u00e9e.
-CalendarUIActivity.msg.canceled=La t\u00e2che a \u00e9t\u00e9 annul\u00e9e.
+CalendarUIActivity.msg.daily=tous les jours
+CalendarUIActivity.msg.every-day=tous les {interval} jours
+CalendarUIActivity.msg.weekly=chaque semaine le {byDays}
+CalendarUIActivity.msg.every-week=toutes les {interval} semaines le {byDays}
+CalendarUIActivity.msg.monthly=chaque mois le
+CalendarUIActivity.msg.every-month=Tous les {interval} mois
+CalendarUIActivity.msg.monthly-by-day={theNumber} {theDay}
+CalendarUIActivity.msg.monthly-by-month-day=jour {theDay}
+CalendarUIActivity.msg.yearly=chaque ann\u00E9e le {theDay}
+CalendarUIActivity.msg.every-year=tous les {interval} ans \u00E0 partir de {theDay}
+
+CalendarUIActivity.msg.count-times={count} fois
+CalendarUIActivity.msg.until=jusqu'au {until}
+
+CalendarUIActivity.msg.summary-the-first=le premier
+CalendarUIActivity.msg.summary-the-second=le second
+CalendarUIActivity.msg.summary-the-third=le troisi\u00E8me
+CalendarUIActivity.msg.summary-the-fourth=le quatri\u00E8me
+CalendarUIActivity.msg.summary-the-last=le dernier
