--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_fr.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_fr.properties
@@ -1,7 +1,7 @@
-WikiUIActivity.label.page-create={0} a créé la page de Wiki: {1}
-WikiUIActivity.label.page-update={0} a édité la page de Wiki: {1}
-WikiUIActivity.label.view-change=Voir les changements
+WikiUIActivity.label.page-create={0} a cr\u00E9\u00E9 la page wiki: {1}
+WikiUIActivity.label.page-update={0} a modifi\u00E9 la page wiki: {1}
+WikiUIActivity.label.view-change=Afficher les Modifications
 WikiUIActivity.label.version=Version: 
-WikiUIActivity.msg.update-page-title=Page's title has been updated to: 
-WikiUIActivity.msg.update-page-content=Page's content has been edited.
-WikiUIActivity.msg.move-page=Page has been moved to: 
+WikiUIActivity.msg.update-page-title=Le titre de la page a \u00E9t\u00E9 chang\u00E9 en : 
+WikiUIActivity.msg.update-page-content=Le contenu de la page a \u00E9t\u00E9 modifi\u00E9.
+WikiUIActivity.msg.move-page=La page a \u00E9t\u00E9 d\u00E9plac\u00E9e vers: 
