--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -16,7 +16,7 @@ CalendarUIActivity.label.more-info=Plus d'Info
 CalendarUIActivity.label.accept-invite=Accepter
 CalendarUIActivity.label.refuse-invite=Refuser
 CalendarUIActivity.label.assign-to-me=Assigner \u00E0 moi
-CalendarUIActivity.label.need-action=Action n\u00E9cessaire
+CalendarUIActivity.label.need-action=A faire
 CalendarUIActivity.label.in-progress=En cours
 CalendarUIActivity.label.complete=Terminer
 CalendarUIActivity.label.cancel=Annuler
