--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -16,7 +16,7 @@
 #
 
 UIActivityComposer.label.UIDocActivityComposer=Fichier
-UIComposerDocumentExtension.label.Select_File=S\u00E9lectionnez un fichier
+UIComposerDocumentExtension.label.Select_File=Partagez un fichier
 UIComposerDocumentExtension.label.Download=T\u00E9l\u00E9charger
 UIComposerDocumentExtension.label.View_File=Voir
 UIComposerDocumentExtension.label.Version=Version
@@ -26,4 +26,4 @@ UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont
 UIComposer.msg.error.Must_select_file=Vous devez d'abord choisir un fichier.
 UIDocActivitySelector.label.cancel=Annuler
 UIDocActivitySelector.label.selectedfile=S\u00E9lectionner
-UIDSUploadInput.label.Upload=Envoyer
+UIDSUploadInput.label.Upload=Transf\u00E9rer
