FORUM-290 | FORUM-291 | Add tooltip for rating

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -49,3 +49,10 @@ AnswerUIActivity.label.button.answer=Answer
 PollUIActivity.label.update_poll=Le sondage a \u00E9t\u00E9 mis \u00E0 jour
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
+
+ActivityRating.title.rank5=Excellent
+ActivityRating.title.rank4=Bon
+ActivityRating.title.rank3=Moyen
+ActivityRating.title.rank2=Mauvais
+ActivityRating.title.rank1=Epouvantable
+ActivityRating.title.NotRateYet=pas encore de valeur
