--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -49,3 +49,10 @@ AnswerUIActivity.label.button.answer=Answer
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
+
+ActivityRating.title.rank5=Good
+ActivityRating.title.rank4=Above average
+ActivityRating.title.rank3=Average
+ActivityRating.title.rank2=Below average
+ActivityRating.title.rank1=Poor
+ActivityRating.title.NotRateYet=no value yet
