SOC-3345 | [Activity] - Reload all activities after closing document viewer. Fix bug do not show popup when attach file, delete activities/comments

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
@@ -21,7 +21,7 @@ UIComposerDocumentExtension.label.Download=Download
 UIComposerDocumentExtension.label.View_File=View
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupWindow.title.UIDocActivitySelector=Select File
+UIPopupComposer.title.UIDocActivitySelector=Select File
 UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
 UIComposer.msg.error.Must_select_file=You have to select file first.
 UIDocActivitySelector.label.cancel=Cancel
