--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
@@ -21,7 +21,7 @@ UIComposerDocumentExtension.label.Download=Descargar
 UIComposerDocumentExtension.label.View_File=Ver
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Selector de archivos
-UIPopupWindow.title.UIDocActivitySelector=Seleccionar archivo
+UIPopupComposer.title.UIDocActivitySelector=Seleccionar archivo
 UIDocActivitySelector.msg.not-a-file=El archivo no existe o se ha producido alg\u00fan error con el archivo seleccionado.
 UIComposer.msg.error.Must_select_file=Tienes que seleccionar el archivo primero.
 UIDocActivitySelector.label.cancel=Cancelar
