--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_BR.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_BR.properties
@@ -21,7 +21,7 @@ UIComposerDocumentExtension.label.Download=Baixar
 UIComposerDocumentExtension.label.View_File=Exibir
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Seletor de arquivos
-UIPopupWindow.title.UIDocActivitySelector=Selecionar arquivo
+UIPopupComposer.title.UIDocActivitySelector=Selecionar arquivo
 UIDocActivitySelector.msg.not-a-file=O arquivo n\u00e3o existe ou ocorreu algum erro com o arquivo selecionado.
 UIComposer.msg.error.Must_select_file=Voc\u00ea deve selecionar o arquivo primeiro.
 UIDocActivitySelector.label.cancel=Cancelar
