INTEG-174: Inject english and french translation from Crowdin 2013-W18

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -71,7 +71,7 @@
   </SocialIntegration>
   <UIPopupWindow>
     <title>
-      <DocViewer>Prévisualiser</DocViewer>
+      <DocViewer>Aperçu</DocViewer>
     </title>
   </UIPopupWindow>
   <ElementSet>
