--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -44,7 +44,7 @@ AnswerUIActivity.label.comments={0} Commentaires
 AnswerUIActivity.label.noAnswer=Pas de R\u00E9ponse
 AnswerUIActivity.label.answer={0} Reponse
 AnswerUIActivity.label.answers={0} Reponses
-AnswerUIActivity.label.button.answer=Answer
+AnswerUIActivity.label.button.answer=R\u00E9ponse
 
 PollUIActivity.label.update_poll=Le sondage a \u00E9t\u00E9 mis \u00E0 jour
 PollUIActivity.label.vote={0} vote
@@ -53,6 +53,6 @@ PollUIActivity.label.votes={0} votes
 ActivityRating.title.rank5=Excellent
 ActivityRating.title.rank4=Bon
 ActivityRating.title.rank3=Moyen
-ActivityRating.title.rank2=Mauvais
-ActivityRating.title.rank1=Epouvantable
+ActivityRating.title.rank2=Pas Bon
+ActivityRating.title.rank1=Mauvais
 ActivityRating.title.NotRateYet=pas encore de valeur
