--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -21,7 +21,7 @@ UIComposerDocumentExtension.label.Download=T\u00E9l\u00E9charger
 UIComposerDocumentExtension.label.View_File=Voir
 UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Choisir un fichier
-UIPopupComposer.title.UIDocActivitySelector=S\u00E9lectionnez un fichier
+UIPopupComposer.title.UIDocActivitySelector=S\u00E9lectionnez le fichier
 UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont survenues.
 UIComposer.msg.error.Must_select_file=Vous devez d'abord choisir un fichier.
 UIDocActivitySelector.label.cancel=Annuler
