PLF-4797: Display "searching.." during search

--- a/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_en.properties
+++ b/integ-search-portlet/src/main/resources/unifiedsearch/unifiedsearch_en.properties
@@ -17,3 +17,4 @@ unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
 unifiedsearch.edit.saveSettings.label=Save Settings
 unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
 unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
+unifiedsearch.searching.label=Searching..
