--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
@@ -19,6 +19,7 @@ UIActivityComposer.label.UIDocActivityComposer=Archivo
 UIComposerDocumentExtension.label.Select_File=Seleccionar archivo
 UIComposerDocumentExtension.label.Download=Descargar
 UIComposerDocumentExtension.label.View_File=Ver
+UIComposerDocumentExtension.label.Goto_Folder=Ir a la carpeta
 UIPopupWindow.title.UIOneNodePathSelector=Selector de archivos
 UIPopupWindow.title.UIDocActivitySelector=Seleccionar archivo
 UIDocActivitySelector.msg.not-a-file=El archivo no existe o se ha producido alg\u00fan error con el archivo seleccionado.
