INTEG-183: Inject english and french translation from Crowdin 2013-W20

--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_fr.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_fr.properties
@@ -17,3 +17,4 @@ unifiedsearch.edit.hideFacetsFilter.label=Masquer le filtre par facettes:
 unifiedsearch.edit.saveSettings.label=Enregistrer
 unifiedsearch.edit.alert.saveSettings=Vos param\u00E8tres ont \u00E9t\u00E9 enregistr\u00E9s.
 unifiedsearch.edit.alert.error.saveSettings=Un probl\u00E8me s'est produit lors de l'enregistrement de vos param\u00E8tres.
+unifiedsearch.searching.label=Recherche en cours...
