INTEG-180 [integ-ecms-social] Localisation label for document state in Activity Stream
Fix description: Add a new key to translate the word "state".

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -6,6 +6,7 @@
 			<editedBy>was edited by</editedBy>
 			<system>the system</system>
 			<readmore>...Read More.</readmore>
+      <state>State</state>
 		</messages>
 		<publicationStates>
 			<archived>Archived</archived>
