INTEG-184: [integ-ecms] i18n of actions on uploaded files

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_en.xml
@@ -68,6 +68,7 @@
     </publicationStates>
     <view>View</view>
     <edit>Edit</edit>
+    <download>Download</download>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
