SOC-3423 | Groovy template exception when go to home page after a friend shared a file

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
@@ -27,3 +27,4 @@ UIComposer.msg.error.Must_select_file=You have to select file first.
 UIDocActivitySelector.label.cancel=Cancel
 UIDocActivitySelector.label.selectedfile=Select
 UIDSUploadInput.label.Upload=Upload
+UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
