--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -7,7 +7,7 @@ ForumUIActivity.label.lastReply=Voir la derni\u00E8re r\u00E9ponse
 ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
 ForumUIActivity.msg.reply-success=Vous avez r\u00E9pondu au message: {0}
-ForumUIActivity.msg.reply-empty=Le titre du message est vide.
+ForumUIActivity.msg.reply-empty=Le titre ou le message est vide.
 ForumUIActivity.forum.update-topic-title=Le titre a \u00E9t\u00E9 chang\u00E9 en : {0}
 ForumUIActivity.forum.update-topic-content=Le contenu a \u00E9t\u00E9 modifi\u00E9.
 ForumUIActivity.forum.update-topic-rate=La discussion a \u00E9t\u00E9 not\u00E9e: {0}
