--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -27,3 +27,4 @@ UIComposer.msg.error.Must_select_file=Vous devez d'abord choisir un fichier.
 UIDocActivitySelector.label.cancel=Annuler
 UIDocActivitySelector.label.selectedfile=S\u00E9lectionner
 UIDSUploadInput.label.Upload=Transf\u00E9rer
+UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
