INTEG-190: Inject english and french translation from Crowdin W22

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -68,7 +68,7 @@
     </publicationStates>
     <view>Voir</view>
     <edit>Modifier</edit>
-    <download>Download</download>
+    <download>Télécharger</download>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
