--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -45,6 +45,7 @@ AnswerUIActivity.label.noAnswer=No Answer
 AnswerUIActivity.label.answer={0} Answer
 AnswerUIActivity.label.answers={0} Answers
 AnswerUIActivity.label.button.answer=Answer
+AnswerUIActivity.label.question.point=Points
 
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
